# hw-pipelines

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: pipeline.yml
pipelines/airflow/: training.py
scripts/: cli.py  model.py  preprocessing.py  training.py
tests/: conftest.py  run_tests.py  test_code.py  test_data.py  test_model.py
